searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
