searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`search.local.panoptikoen.com`)
      kind: Rule
      services:
        - name: searxng
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: wildcard-yourdomain-tls
